--- a/Styles.Css
+++ b/Styles.Css
@@ -17,11 +17,13 @@ p{
 .clay1{
     border: 5px solid#101536;
     border-radius: 100%;
+    height: 150px;
     width: 150px;
 }
 .clay2,.clay3{
     border: 5px solid#101536;
     border-radius: 15px;
+    height: 250px;
     width: 250px;
     size: 100px;
 }
