--- a/Styles.Css
+++ b/Styles.Css
@@ -3,7 +3,7 @@ body{
 }
 @media only screen and (max-width: 600px){ 
     body{
-        background: linear-gradient(to top right, #73C8A9, #373B44);
+        background: linear-gradient(to top right, #BE5869, #403A3E);
     }
 }
 #main{
