--- a/Styles.Css
+++ b/Styles.Css
@@ -1,7 +1,7 @@
 body{
     background-color: linear-gradient(to bottom left, #73C8A9, #373B44);
 }
-@media (max-width: 600px){ 
+@media only screen and (max-width: 600px) { 
     body{
         background-color: linear-gradient(to top right, #BE5869, #403A3E);
     }
