--- a/Styles.Css
+++ b/Styles.Css
@@ -1,9 +1,9 @@
 body{
-    background-color: linear-gradient(to bottom left, #73C8A9, #373B44);
+    background: linear-gradient(to bottom left, #73C8A9, #373B44);
 }
 @media only screen and (max-width: 600px) { 
     body{
-        background-color: linear-gradient(to top right, #BE5869, #403A3E);
+        background: linear-gradient(to top right, #BE5869, #403A3E);
     }
  }
 #main{
