--- a/Styles.Css
+++ b/Styles.Css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(to bottom, #BE5869, #373B44);
+    background: linear-gradient(to top right, #BE5869, #373B44);
 }
 #main{
     margin: 20px;
