--- a/Styles.Css
+++ b/Styles.Css
@@ -1,6 +1,11 @@
 body{
     background: linear-gradient(to top right, #BE5869, #373B44);
 }
+@media (max-width: 800px) {
+    body {
+        background: linear-gradient(to bottom left, #73C8A9, #373B44);
+    }
+  }
 #main{
     margin: 50px;
     padding: 15px;
